--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.7"
+    "astro": "^5.14.7",
+    "decap-cms-app": "^3.8.4"
   }
 }
