--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,8 +3,8 @@ backend:
     branch: main # or "master" — match your repo's default branch
 
 collections:
-    - name: "blog" # Used in routes, e.g., /admin/collections/blog
-      label: "Blog" # Used in the UI
+    - name: "posts" # Used in routes, e.g., /admin/collections/blog
+      label: "Posts" # Used in the UI
       folder: "src/pages/posts" # The path to the folder where the documents are stored
       create: true # Allow users to create new documents in this collection
       fields: # The fields for each document, usually in frontmatter
