--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -18,7 +18,8 @@ collections:
           - { label: "Publish Date", name: "pubDate", widget: "datetime" }
           - { label: "Description", name: "description", widget: "string" }
           - { label: "Thumbnail", name: "thumbnail", widget: "image" }
+          - { label: "Tags", name: "tags", widget: "list" }
           - { label: "Body", name: "body", widget: "markdown" }
 
 media_folder: "src/assets/images" # Location where files will be stored in the repo
-public_folder: "src/assets/images" # The src attribute for uploaded media
+public_folder: "/assets/images" # The src attribute for uploaded media
