--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -21,5 +21,5 @@ collections:
           - { label: "Tags", name: "tags", widget: "list" }
           - { label: "Body", name: "body", widget: "markdown" }
 
-media_folder: "src/assets/images" # Location where files will be stored in the repo
+media_folder: "/assets/images" # Location where files will be stored in the repo
 public_folder: "/assets/images" # The src attribute for uploaded media
